crates/reinhardt-pages/tests/ui/client_form/fail/serde_alias_collision.rs
use reinhardt_pages::ClientForm;

#[derive(Clone, Default, PartialEq, ClientForm)]
struct CollisionRequest {
	#[serde(rename = "second")]
	first: String,
	second: String,
}

fn main() {}
